# flutter_rust_sample

./: pubspec.yaml
assets/: 1.avif  10.avif  11.avif  12.avif  13.avif  14.avif  15.avif  16.avif  2.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif  9.avif
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
lib/avif/: avif_encoder.dart  avif_image.dart
lib/sample/comic/: avif_list.dart  webp_list.dart
lib/sample/sample/: home_body.dart  list_body.dart  sample_grid.dart  top_buttons.dart
lib/sample/util/: file_util.dart  log.dart  measure.dart
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
