[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "=1.80.0"
libavif-sys = { version = "0.14.3", default-features = false, features = ["codec-aom"] }
lazy_static = "1.4.0"
